<resources>
    <string name="app_name">SemestralneZadanie</string>
    <string name="prejst_formular">Prejsť na formulár</string>
    <string name="title">Vyplňte údaje</string>
    <string name="name">Zadajte meno podniku</string>
    <string name="pubType">Zadajte typ podniku</string>
    <string name="companyLatitude">Zadajte zem.sirku podniku</string>
    <string name="companyLongitude">Zadajte zem.dlzku podniku</string>
    <string name="potvrdit">Potvrdiť</string>
    <string name="showOnMap">Ukáž na mape</string>
    <string name="zoradit">Zoradiť</string>
    <string name="webPage">Zadajte webstránku podniku</string>
    <string name="pubPhone">Zadajte tel.číslo podniku</string>
    <string name="repeatPassword">Zopakujte heslo</string>
    <string name="password">Heslo</string>
    <string name="emailField">E-mail</string>
    <string name="personSurname">Priezvisko</string>
    <string name="personName">Meno</string>
    <string name="loginToApp">Prihlásiť sa</string>
    <string name="registerToApp">Registrovať sa</string>
    <string name="existingAcc">Už máte účet?</string>
    <string name="registrationTitle">Registrácia</string>
    <string name="noAccount">Ešte nemáte účet?</string>
    <string name="loginTitle">Prihlásenie</string>
    <string name="nickName">Používateľské meno</string>
    <string name="pubName">Názov podniku</string>
    <string name="pubAmenity">Druh podniku</string>
    <string name="usersCount">Počet ľudí</string>
    <string name="visitWebsite">Ísť na web podniku</string>
    <string name="callToPub">Zavolať do podniku</string>
    <string name="pubUsersCountTitle">Počet ľudí:</string>
    <string name="smokingAreaTitle">Fajčiarská zóna:</string>
    <string name="takeAwayTitle">Jedlo so sebou:</string>
    <string name="openingHrsTitle">Otváracie hodiny</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="friendName">Meno priateľa</string>
    <string name="deleteFriend">Odstrániť priateľa</string>
    <string name="removeFriendTxt">Odstránenie priateľa</string>
    <string name="addFriendTitle">Pridanie priateľa</string>
    <string name="addFriend">Pridať priateľa</string>
    <string name="pubNameTxt">Podnik</string>
    <string name="checkInTitle">Check-in</string>
    <string name="distanceTxt">Vzdialenosť</string>
</resources>