<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="8dp"
    android:id="@+id/listCardView"
    android:padding="8dp"
    android:layout_margin="5dp"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:text="@string/pubName"
            android:textStyle="bold"
            android:id="@+id/nameText"
            android:textSize="28sp"
            android:textColor="@android:color/black"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:text="@string/pubAmenity"
            android:textSize="23sp"
            android:id="@+id/amenityTxt"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/pubUsersTxt"
            android:layout_width="356dp"
            android:layout_height="wrap_content"
            android:text="@string/usersCount"
            android:textSize="20sp" />

    </LinearLayout>

</androidx.cardview.widget.CardView>